--- a/src/App.css
+++ b/src/App.css
@@ -47,3 +47,28 @@ input[type='submit'] {
 #buttons :nth-child(2) {
 	background-color: #ff9b04;
 }
+
+/* PWA Install banner */
+#installbanner {
+	height: 100px;
+	width: 180px;
+	top: 10px;
+	left: 5px;
+	position: absolute;
+	background-color: #222;
+	padding:10px;
+	border:1px solid orange;
+	border-radius: 2px;
+}
+/* PWA Install Button */
+#installBtn {
+	background-color: orange;
+	border: none;
+	outline: none;
+	height: 30px;
+	width: 60px;
+	cursor: pointer;
+	font-size: var(--ems);
+	margin-bottom: 10px;
+	border:1px solid white;
+}
