added react routes

--- a/src/App.css
+++ b/src/App.css
@@ -105,10 +105,10 @@ video {
   width: 150px;
   height: 150px;
 }
-#remotestream {
-	/* display: block; */
+/* #remotestream {
+
 	
-}
+} */
 
 /* Video controls */
 #controls {
