--- a/src/App.css
+++ b/src/App.css
@@ -26,12 +26,6 @@ footer {
   text-align:center;
   z-index:2;
 }
-@media only screen and (min-width:1000px){
-  footer{
-      right:calc(30% - 50px);
-    
-      }
-  }
 
 body {
   background-color: var(--dark);
@@ -158,11 +152,12 @@ video {
   position: absolute;
   bottom: 4px;
   width: 100%;
-  height: 50%;
+  height: 60%;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: repeat(6, 1fr);
 }
+
 /* disables click events on all svgs */
 svg {
   pointer-events: none;
@@ -194,8 +189,13 @@ svg {
   margin-left: var(--margin);
 }
 #endcall {
-  grid-column: 6/6;
+  grid-column: 1/1;
   grid-row: 6/6;
+}
+@media only screen and (min-width:600px){
+  #endcall{
+    grid-column: 6/6;
+  }
 }
 
 /* Scrollbar styles */
