add display-mode:standalone media query

--- a/src/App.css
+++ b/src/App.css
@@ -198,6 +198,13 @@ svg {
   }
 }
 
+@media all and (display-mode: standalone){
+  /* hides installbanner when PWA is installed */
+  #installbanner{
+    visibility: hidden;
+  }
+}
+
 /* Scrollbar styles */
 
 body {
